feat: add update password and update profile endpoints
